achievements service and tests

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,5 +21,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
+  "types": ["vitest", "node"],
   "include": ["vite.config.ts"]
 }
