--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "readrise-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "build": "tsc -b && vite build",
@@ -55,6 +55,7 @@
     "msw": "^2.10.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0",
