--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^7.6.3",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
